flexbison/infixcalc.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | expr '\n'
    5     | error '\n'

    6 expr: expr '+' term
    7     | expr '-' term
    8     | term

    9 term: term '*' fact
   10     | term '/' fact
   11     | term '%' fact
   12     | '-' fact
   13     | fact

   14 fact: "number"
   15     | fact '^' fact
   16     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4 5
    '%' (37) 11
    '(' (40) 16
    ')' (41) 16
    '*' (42) 9
    '+' (43) 6
    '-' (45) 7 12
    '/' (47) 10
    '^' (94) 15
    error (256) 5
    "number" <double> (258) 14
    NEG (259)


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    input (15)
        on left: 1 2
        on right: 0 2
    line (16)
        on left: 3 4 5
        on right: 2
    expr <double> (17)
        on left: 6 7 8
        on right: 4 6 7 16
    term <double> (18)
        on left: 9 10 11 12 13
        on right: 6 7 8 9 10 11
    fact <double> (19)
        on left: 14 15 16
        on right: 9 10 11 12 13 15


State 0

    0 $accept: • input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input • $end
    2 input: input • line

    $end      shift, and go to state 2
    error     shift, and go to state 3
    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '\n'      shift, and go to state 6
    '('       shift, and go to state 7

    line  go to state 8
    expr  go to state 9
    term  go to state 10
    fact  go to state 11


State 2

    0 $accept: input $end •

    $default  accept


State 3

    5 line: error • '\n'

    '\n'  shift, and go to state 12


State 4

   14 fact: "number" •

    $default  reduce using rule 14 (fact)


State 5

   12 term: '-' • fact

    "number"  shift, and go to state 4
    '('       shift, and go to state 7

    fact  go to state 13


State 6

    3 line: '\n' •

    $default  reduce using rule 3 (line)


State 7

   16 fact: '(' • expr ')'

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    expr  go to state 14
    term  go to state 10
    fact  go to state 11


State 8

    2 input: input line •

    $default  reduce using rule 2 (input)


State 9

    4 line: expr • '\n'
    6 expr: expr • '+' term
    7     | expr • '-' term

    '-'   shift, and go to state 15
    '+'   shift, and go to state 16
    '\n'  shift, and go to state 17


State 10

    8 expr: term •
    9 term: term • '*' fact
   10     | term • '/' fact
   11     | term • '%' fact

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19
    '%'  shift, and go to state 20

    $default  reduce using rule 8 (expr)


State 11

   13 term: fact •
   15 fact: fact • '^' fact

    '^'  shift, and go to state 21

    $default  reduce using rule 13 (term)


State 12

    5 line: error '\n' •

    $default  reduce using rule 5 (line)


State 13

   12 term: '-' fact •
   15 fact: fact • '^' fact

    '^'  shift, and go to state 21

    $default  reduce using rule 12 (term)


State 14

    6 expr: expr • '+' term
    7     | expr • '-' term
   16 fact: '(' expr • ')'

    '-'  shift, and go to state 15
    '+'  shift, and go to state 16
    ')'  shift, and go to state 22


State 15

    7 expr: expr '-' • term

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    term  go to state 23
    fact  go to state 11


State 16

    6 expr: expr '+' • term

    "number"  shift, and go to state 4
    '-'       shift, and go to state 5
    '('       shift, and go to state 7

    term  go to state 24
    fact  go to state 11


State 17

    4 line: expr '\n' •

    $default  reduce using rule 4 (line)


State 18

    9 term: term '*' • fact

    "number"  shift, and go to state 4
    '('       shift, and go to state 7

    fact  go to state 25


State 19

   10 term: term '/' • fact

    "number"  shift, and go to state 4
    '('       shift, and go to state 7

    fact  go to state 26


State 20

   11 term: term '%' • fact

    "number"  shift, and go to state 4
    '('       shift, and go to state 7

    fact  go to state 27


State 21

   15 fact: fact '^' • fact

    "number"  shift, and go to state 4
    '('       shift, and go to state 7

    fact  go to state 28


State 22

   16 fact: '(' expr ')' •

    $default  reduce using rule 16 (fact)


State 23

    7 expr: expr '-' term •
    9 term: term • '*' fact
   10     | term • '/' fact
   11     | term • '%' fact

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19
    '%'  shift, and go to state 20

    $default  reduce using rule 7 (expr)


State 24

    6 expr: expr '+' term •
    9 term: term • '*' fact
   10     | term • '/' fact
   11     | term • '%' fact

    '*'  shift, and go to state 18
    '/'  shift, and go to state 19
    '%'  shift, and go to state 20

    $default  reduce using rule 6 (expr)


State 25

    9 term: term '*' fact •
   15 fact: fact • '^' fact

    '^'  shift, and go to state 21

    $default  reduce using rule 9 (term)


State 26

   10 term: term '/' fact •
   15 fact: fact • '^' fact

    '^'  shift, and go to state 21

    $default  reduce using rule 10 (term)


State 27

   11 term: term '%' fact •
   15 fact: fact • '^' fact

    '^'  shift, and go to state 21

    $default  reduce using rule 11 (term)


State 28

   15 fact: fact • '^' fact
   15     | fact '^' fact •

    '^'  shift, and go to state 21

    $default  reduce using rule 15 (fact)
